--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
               <h2>Research</h2>
             </div> -->
             <p>
-              Welcome! I am an incoming <strong>Assistant Professor of Computer Science</strong> at <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a>.
+              Welcome! I am an <strong>Assistant Professor of Computer Science</strong> at <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a>.
+              I am also a part of <a target="_blank" href="https://ai.jhu.edu">DSAI</a> and <a target="_blank" href="https://isi.jhu.edu">ISI</a>.
               I received my Ph.D. in Computer Science from the <a target="_blank" href="https://upenn.edu">University of Pennsylvania</a>, where I was advised by <a target="_blank" href="https://www.cis.upenn.edu/~mhnaik/">Prof. Mayur Naik</a>.
-              My primary research interests lie in <strong>programming languages</strong> and <strong>machine learning</strong>, with additional work in <strong>security</strong> and <strong>software engineering</strong>.
+              My primary research interests lie in <strong>programming languages</strong> and <strong>machine learning</strong>, with special interest in neurosymbolic methods.
+              I also have work in <strong>security</strong> and <strong>software engineering</strong>.
             </p>
             <p>
               My dissertation research is focused on neurosymbolic programming, an emerging paradigm that bridges the gap between deep learning and logical reasoning.
@@ -101,14 +103,16 @@
             </div>
             <ul>
               <li class="news-item">
+                Sep 2025 - I am teaching EN.601.727, <a target="_blank" href="https://machine-programming.github.io">Machine Programming</a>, a new course on foundation, frontiers, and applications of program synthesis!
+              </li>
+              <li class="news-item">
+                July 2025 - I joined the <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a> as an Assistant Professor in <a target="_blank" href="https://www.cs.jhu.edu">CS</a> and a part of <a target="_blank" href="https://ai.jhu.edu">DSAI</a>!
+              </li>
+              <li class="news-item">
                 June 2025 - I defended my <a target="_blank" href="res/thesis.pdf">PhD thesis</a>!
               </li>
               <li class="news-item">
-                June 2025 - Our 🦞 Lobster paper is headed to ASPLOS 2026!
-                Yes, another seafood-themed system! The acceptance rate is less than 10%.
-                Insane! Congratulations Paul!
-                Check it out on
-                <a target="_blank" href="https://arxiv.org/abs/2503.21937">ArXiv</a>.
+                June 2025 - Our 🦞 Lobster paper is headed to ASPLOS 2026! Yes, another seafood-themed system! Check it out on <a target="_blank" href="https://arxiv.org/abs/2503.21937">ArXiv</a>.
               </li>
               <li class="news-item">
                 <span style="color: red">
@@ -119,15 +123,14 @@
                 Spring 2025 - I am on the academic job market for the 2024-25 cycle!
                 Here is my <a href="res/cv/cv-when-applying.pdf">CV</a>, <a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
               </li>
-              <li class="news-item">
-                Jan 22, 2025 - Two of our papers got accepted to ICLR 2025!
-              </li>
-              <li class="news-item">
-                Dec 20, 2024 - I will be co-organizing the <a target="_blank" href="https://www.tacps.org">3rd TACPS Workshop</a> which will happen with CAV 2025!
-              </li>
-              <li class="news-item">
-                Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!
-              </li>
+            </ul>
+          </div>
+          <div id="teaching" class="section">
+            <div class="section-header">
+              <h2>Teaching</h2>
+            </div>
+            <ul>
+              <li><a target="_blank" href="https://machine-programming.github.io">EN.601.727, Machine Programming</a> - <i>Johns Hopkins University, Fall 2025</i></li>
             </ul>
           </div>
           <div id="publications" class="section">
@@ -310,7 +313,7 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
-                    <strong class="title">Synthesizing Intermediate Program States for Efficient Directed Fuzzing</strong>
+                    <strong class="title">Locus: Agentic Predicate Synthesis for Directed Fuzzing</strong>
                     <span class="conference">Preprint</span>
                   </div>
                   <div class="authors">
@@ -322,8 +325,7 @@
                     <span>Kexin Pei</span>
                   </div>
                   <div>
-                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2405.17238">ArXiv</a>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/liby99/cwe-bench-java">Dataset</a> -->
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2508.21302">ArXiv</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
@@ -529,6 +531,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">TurnaboutLLM: A Deductive Reasoning Benchmark from Detective Games</strong>
+                    <span class="conference">EMNLP 2025 (Main)</span>
                   </div>
                   <div class="authors">
                     <span>Yuan Yuan</span>
