Adding looking for students

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
               In my spare time, I am a Piano enthusiast and the keyboardist of the band, <a target="_blank" href="https://www.instagram.com/the_protagonists_band/">The Protagonists</a>, where I play Jazz, Fusion, and Pop music.
               My favorite programming language is Rust!
             </p>
+            <p>
+              <strong>For students:</strong>
+              I am looking for self-motivated students at both undergraduate and graduate levels to work on research in the intersection of programming languages, security, and machine learning.
+              Please reach out to me via email if you are interested!
+              I am also looking for Ph.D. students; prospective applicants should include their CV and a brief statement of research interests when contacting me.
+            </p>
           </div>
           <div id="news" class="section">
             <div class="section-header">
