Adding a few things

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="sidebar col-md-3 col-12">
           <div>
-            <div class="sidebar-me col-md-12 col-8" style="background-image: url(img/me-large.jpeg); margin: 0 auto;"></div>
+            <div class="sidebar-me col-md-12 col-8" style="background-image: url(img/me-2024.jpeg); margin: 0 auto;"></div>
           </div>
           <div>
             <h1>Ziyang Li</h1>
@@ -609,6 +609,10 @@
             <ul class="talks list-group">
               <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Dec 19, 2024</strong>
+                Neurosymbolic Scene Graph Generation @ <a target="_blank" href="http://sepl-hkust.github.io/">TACPS Workshop, CAV'25</a>
+              </li>
+              <li class="talk list-group-item list-group-item-action">
+                <strong class="date">Dec 19, 2024</strong>
                 Invited talk on Scallop and Neurosymbolic Programming @ <a target="_blank" href="http://sepl-hkust.github.io/">HKUST SEPL Seminar</a>
               </li>
               <li class="talk list-group-item list-group-item-action">
@@ -660,59 +664,6 @@
                 <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.scallop-lang.org/ssft22/index.html">Tutorial</a>
                 <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.scallop-lang.org/ssft22/index.html">Slides</a>
               </li>
-            </ul>
-          </div>
-          <div id="awards-fellowships" class="section">
-            <div class="section-header">
-              <h2>Awards and Fellowships</h2>
-            </div>
-            <ul>
-              <li>AWS Fellows - <i>05/2023</i></li>
-              <li>KPCB Fellows, Engineering - <i>06/2018 - 09/2018</i></li>
-            </ul>
-          </div>
-          <div id="teaching-services" class="section">
-            <div class="section-header">
-              <h2>Teaching, Services, and Mentoring</h2>
-            </div>
-            <h6>Teaching:</h6>
-            <ul>
-              <li>Teaching Assistant, CIS 7000, Large Language Models - <i>UPenn, Fall 2024</i></li>
-              <li>Teaching Assistant, CIS 5470, Software Analysis - <i>UPenn, Fall 2020, Fall 2021, Summer 2022, Fall 2022, Fall 2023</i></li>
-              <li>Tutor, CSE 190, Virtual Reality Technology - <i>UCSD, Spring 2019</i></li>
-              <li>Tutor, CSE 165, 3D User Interaction - <i>UCSD, Winter 2019</i></li>
-              <li>Tutor, CSE 130, Programming Language - <i>UCSD, Fall 2018</i></li>
-              <li>Tutor, CSE 163, Advanced Computer Graphics - <i>UCSD, Spring 2018</i></li>
-              <li>Tutor, CSE 167, Intro to Computer Graphics - <i>UCSD, Winter 2018</i></li>
-              <li>Tutor, CSE 12, Data Structure - <i>UCSD, Winter 2017</i></li>
-            </ul>
-            <h6>Professional Services:</h6>
-            <ul>
-              <li>Co-organizer, TACPS Workshop 2025</li>
-              <li>Reviewer, NeurIPS <i>2024</i></li>
-              <li>Reviewer, ICLR - <i>2023, 2024, 2025</i></li>
-              <li>Reviewer, ICML - <i>2024</i></li>
-              <li>Reviewer, ARR - <i>2023 Nov, 2024 Feb, May, Aug, Nov</i></li>
-            </ul>
-            <h6>Past Mentees:</h6>
-            <ul>
-              <li><a target="_blank" href="https://scholar.google.com/citations?user=XGGweFAAAAAJ&hl=en">Jason Liu</a></li>
-              <li><a target="_blank" href="#">Felix Zhu</a></li>
-              <li><a target="_blank" href="#">Eric Zhao</a></li>
-              <li><a target="_blank" href="#">William Dodds</a></li>
-              <li><a target="_blank" href="#">Eric Liu</a></li>
-              <li><a target="_blank" href="#">Nathan Zhang</a></li>
-            </ul>
-          </div>
-          <div id="work" class="section">
-            <div class="section-header">
-              <h2>Work</h2>
-            </div>
-            <ul>
-              <li>Summer Research Intern - <i>RelationalAI, 05/2021 - 08/2021</i></li>
-              <li>Summer Research Intern - <i>Visa Research, 05/2020 - 07/2020</i></li>
-              <li>Front-end Engineer Intern - <i>Coursera, 06/2018 - 09/2018</i></li>
-              <li>Undergraduate Research Intern - <i>UCSD Design Lab, 06/2017 - 06/2018</i></li>
             </ul>
           </div>
         </div>
