Add new paper acceptance

--- a/index.html
+++ b/index.html
@@ -149,22 +149,23 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">ESCA: Contextualizing Embodied Agents via Scene-Graph Generation</strong>
-                    <span class="conference">Preprint</span>
+                    <span class="conference">NeurIPS</span>
                     <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span>Jiani Huang</span>
-                    <span class="me">Ziyang Li</span>
-
                     <span>Matthew Kuo</span>
                     <span>Amish Sethi</span>
                     <span>Neelay Velingker</span>
                     <span>Mayank Keoliya</span>
                     <span>Ser-Nam Lim</span>
+                    <span class="me">Ziyang Li</span>
                     <span>Mayur Naik</span>
                   </div>
                   <div>
-                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Code</a> -->
+                    <strong>🏆 Spotlight</strong>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://huggingface.co/datasets/video-fm/ESCA-video-87K">ESCA-Video-87K Dataset</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://huggingface.co/video-fm/vine_v0">Vine-v0 Model</a>
                     <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/lobster.pdf">Preprint</a> -->
                   </div>
                 </li>
