--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     <span>Ser-Nam Lim</span>
                   </div>
                   <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://openreview.net/forum?id=HEXtydywnE">OpenReview</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2304.07647">ArXiv</a>
                   </div>
                 </li>
