Adding an arxiv link

--- a/index.html
+++ b/index.html
@@ -354,8 +354,7 @@
                     <span>Armando Solar-Lezama</span>
                   </div>
                   <div>
-                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2405.17238">ArXiv</a>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/liby99/cwe-bench-java">Dataset</a> -->
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2503.22625">ArXiv</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
