Adding new papers

--- a/index.html
+++ b/index.html
@@ -321,6 +321,19 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">FineNib: A Query Synthesizer For Static Analysis of Security Vulnerabilities</strong>
+                    <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
+                  </div>
+                  <div class="authors">
+                    <span>Claire Wang</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Saikat Dutta</span>
+                    <span>Mayur Naik</span>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">Locus: Agentic Predicate Synthesis for Directed Fuzzing</strong>
                     <span class="conference">Preprint</span>
                   </div>
@@ -537,8 +550,29 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">Vision Language Models Cannot Plan, but Can They Formalize?</strong>
+                    <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
+                  </div>
+                  <div class="authors">
+                    <span>Muyu He</span>
+                    <span>Yuxi Zheng</span>
+                    <span>Yuchen Liu</span>
+                    <span>Zijian An</span>
+                    <span>Bill Cai</span>
+                    <span>Jiani Huang</span>
+                    <span>Lifeng Zhou</span>
+                    <span>Feng Liu</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Li Zhang</span>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">TurnaboutLLM: A Deductive Reasoning Benchmark from Detective Games</strong>
-                    <span class="conference">EMNLP 2025 (Main)</span>
+                    <span class="conference">EMNLP</span>
+                    <span class="conference">2025</span>
+                    <span class="conference">Main</span>
                   </div>
                   <div class="authors">
                     <span>Yuan Yuan</span>
@@ -555,7 +589,9 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">NeuroStrata: Harnessing Neurosymbolic Paradigms for Improved Design, Testability, and Verifiability of Autonomous CPS</strong>
-                    <span class="conference">FSE 2025 IVR Track</span>
+                    <span class="conference">FSE</span>
+                    <span class="conference">2025</span>
+                    <span class="conference">IVR Track</span>
                   </div>
                   <div class="authors">
                     <span>Xi Zheng</span>
