Adding arxiv link to vision language model pddl synthesis paper

--- a/index.html
+++ b/index.html
@@ -566,6 +566,9 @@
                     <span class="me">Ziyang Li</span>
                     <span>Li Zhang</span>
                   </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.arxiv.org/abs/2509.21576">ArXiv</a>
+                  </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
