LOCUS Got in to ICSE 2026!

--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Locus: Agentic Predicate Synthesis for Directed Fuzzing</strong>
-                    <span class="conference">Preprint</span>
+                    <span class="conference">ICSE</span>
+                    <span class="conference">2026</span>
                   </div>
                   <div class="authors">
                     <span>Jie Zhu</span>
