Updating reference websites

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               <a class="sidebar-icon" href="https://github.com/liby99" target="_blank" data-bs-toggle="tooltip" data-bs-title="Github">
                 <i class="fa fa-github" aria-hidden="true" style="font-size: 26px"></i>
               </a>
-              <a class="sidebar-icon" href="https://liby.cubes.studio/index.html" target="_blank" data-bs-toggle="tooltip" data-bs-title="Personal Website">
+              <a class="sidebar-icon" href="https://libyliby.me/" target="_blank" data-bs-toggle="tooltip" data-bs-title="Personal Website">
                 <i class="fa fa-user" aria-hidden="true" style="font-size: 24px"></i>
               </a>
               <a class="sidebar-icon" href="https://www.linkedin.com/in/liby99/" target="_blank" data-bs-toggle="tooltip" data-bs-title="LinkedIn">
                 <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 24px"></i>
               </a>
-              <a class="sidebar-icon" href="https://scholar.google.com/citations?user=tROyBasAAAAJ&hl=en" target="_blank" data-bs-toggle="tooltip" data-bs-title="Google Scholar">
+              <a class="sidebar-icon" href="https://scholar.google.com/citations?user=Axu--IUAAAAJ&hl=en" target="_blank" data-bs-toggle="tooltip" data-bs-title="Google Scholar">
                 <!-- <img src="img/vendor/google-scholar.svg" width="28px" height="28px" /> -->
                 <svg width="28" height="28" viewBox="0 0 500 500" style="margin-top: -5px">
                   <g inkscape:groupmode="layer" id="layer6" inkscape:label="icon">
