--- a/index.html
+++ b/index.html
@@ -156,14 +156,16 @@
                     <span>Jiani Huang</span>
                     <span>Matthew Kuo</span>
                     <span>Amish Sethi</span>
-                    <span>Neelay Velingker</span>
                     <span>Mayank Keoliya</span>
+                    <span>Neelay Velingker</span>
+                    <span>JungHo Jung</span>
                     <span>Ser-Nam Lim</span>
                     <span class="me">Ziyang Li</span>
                     <span>Mayur Naik</span>
                   </div>
                   <div>
                     <strong>🏆 Spotlight</strong>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2510.15963">ArXiv</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://huggingface.co/datasets/video-fm/ESCA-video-87K">ESCA-Video-87K Dataset</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://huggingface.co/video-fm/vine_v0">Vine-v0 Model</a>
                     <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/lobster.pdf">Preprint</a> -->
