Adding new papers

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
-                    <strong class="title">FineNib: A Query Synthesizer For Static Analysis of Security Vulnerabilities</strong>
+                    <strong class="title">QLCoder: A Query Synthesizer For Static Analysis of Security Vulnerabilities</strong>
                     <span class="conference">Preprint</span>
                     <span class="conference">2025</span>
                   </div>
@@ -332,6 +332,9 @@
                     <span class="me">Ziyang Li</span>
                     <span>Saikat Dutta</span>
                     <span>Mayur Naik</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2511.08462">arXiv</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
@@ -551,6 +554,26 @@
             <div class="publication-section">
               <h6>Others:</h6>
               <ul class="publications list-group">
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
+                    <strong class="title">Unifying Inference-Time Planning Language Generation</strong>
+                    <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
+                  </div>
+                  <div class="authors">
+                    <span>Prabhu Prakash Kagitha</span>
+                    <span>Bo Sun</span>
+                    <span>Ishan Desai</span>
+                    <span>Andrew Zhu</span>
+                    <span>Cassie Huang</span>
+                    <span>Manling Li</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Li Zhang</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2505.14763">ArXiv</a>
+                  </div>
+                </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Vision Language Models Cannot Plan, but Can They Formalize?</strong>
